# workout-sync

./: .envrc  .gitignore  AGENTS.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: git-initial-commit.txt  task-1-env-example.txt  task-1-scaffold.txt  task-2-no-rest-days.txt  task-2-parse-all.txt  task-3-rol-workout.json  task-3-small-distance.json  task-3-strength-workout.json  task-4-integration-testing-note.txt  task-5-missing-file.txt  task-5-no-creds.txt  task-6-full-dry-run.txt  task-6-upload-manual.txt  task1-cli-verification.txt
.sisyphus/notepads/workout-sync/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: workout-sync.md
docs/: architecture.md  configuration.md  garmin-api.md  usage.md  xls-format.md
workout_sync/: __init__.py  __main__.py  builder.py  cli.py  downloader.py  garmin_client.py  parser.py
